Move lookup process to data nodes